--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -46,6 +46,12 @@ Parameters:
     Default: m4.large
     Description: Instance Type for Solace PubSub+ event broker nodes
     Type: String
+  SubnetID:
+    Description: >-
+      Comma separated list of VPC subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8);
+      VPC must exist with proper configuration for Solacet cluster access (internal
+      and external) and the subnets must be in the same VPC as the security groups
+    Type: AWS::EC2::Subnet::Id
   NodeSecurityGroup:
     Description: Comma separated list of security groups for the members of the cluster
       (e.g. sg-7f16e910,sg-4be93ca2); The security groups must be in the same VPC
@@ -93,12 +99,6 @@ Parameters:
       can include numbers, lowercase letters, uppercase letters, hyphens (-), and
       forward slash (/).
     Type: String
-  SubnetID:
-    Description: >-
-      Comma separated list of VPC subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8);
-      VPC must exist with proper configuration for Solacet cluster access (internal
-      and external) and the subnets must be in the same VPC as the security groups
-    Type: AWS::EC2::Subnet::Id
 Mappings:
   AWSAMIRegionMap:
     AMI:
@@ -472,10 +472,10 @@ Resources:
         - Key: Name
           Value: !Join
             - '-'
-            - - !Ref 'ParentStackName'
+            - - !If [NonHA, !Ref 'AWS::StackName', !Ref ParentStackName]
               - !Ref 'NodeDesignation'
         - Key: ParentStack
-          Value: !Ref 'ParentStackName'
+          Value: !If [NonHA, !Ref 'AWS::StackName', !Ref ParentStackName]
         - Key: HARole
           Value: !If [NonHA, 'non-ha', !Ref NodeDesignation]
       UserData:
