--- a/templates/nodecreate.template
+++ b/templates/nodecreate.template
@@ -190,7 +190,7 @@ Resources:
             - :ec2:recover
       Dimensions:
         - Name: InstanceId
-          Value: !Ref 'NodeLaunchConfig'
+          Value: !Ref 'BrokerNodeInstance'
   NodeRole:
     Type: AWS::IAM::Role
     Properties:
@@ -241,7 +241,7 @@ Resources:
       Roles:
       - !Ref NodeRole
       Path: /
-  NodeLaunchConfig:
+  BrokerNodeInstance:
     Type: AWS::EC2::Instance
     Metadata:
       AWS::CloudFormation::Authentication:
@@ -486,7 +486,7 @@ Resources:
                   - '/opt/aws/bin/cfn-init -v '
                   - '    --stack '
                   - !Ref 'AWS::StackName'
-                  - '    --resource NodeLaunchConfig '
+                  - '    --resource BrokerNodeInstance '
                   - '    --configsets install_all '
                   - '    --region '
                   - !Ref 'AWS::Region'
@@ -518,7 +518,7 @@ Resources:
                   - '/opt/aws/bin/cfn-init -v '
                   - '    --stack '
                   - !Ref 'AWS::StackName'
-                  - '    --resource NodeLaunchConfig '
+                  - '    --resource BrokerNodeInstance '
                   - '    --configsets install_all '
                   - '    --region '
                   - !Ref 'AWS::Region'
@@ -526,15 +526,15 @@ Resources:
                   - "## Wait for all nodes to come on-line\n"
                   - '$AMI_SBIN/wait-for-child-resource.sh '
                   - !Ref 'ParentStackName'
-                  - " MonitorStack NodeLaunchConfig\n"
+                  - " MonitorStack BrokerNodeInstance\n"
                   - "\n"
                   - '$AMI_SBIN/wait-for-child-resource.sh '
                   - !Ref 'ParentStackName'
-                  - " EventBrokerPrimaryStack NodeLaunchConfig\n"
+                  - " EventBrokerPrimaryStack BrokerNodeInstance\n"
                   - "\n"
                   - '$AMI_SBIN/wait-for-child-resource.sh '
                   - !Ref 'ParentStackName'
-                  - " EventBrokerBackupStack NodeLaunchConfig\n"
+                  - " EventBrokerBackupStack BrokerNodeInstance\n"
                   - "\n"
                   - "## Now find the private IP addresses of all deployed nodes\n"
                   - "##   (generating /tmp/solacehosts and /tmp/<role> files)\n"
@@ -579,6 +579,16 @@ Resources:
 Outputs:
   EC2ID:
     Description: Reference to created ec2 instance
-    Value: !Ref 'NodeLaunchConfig'
+    Value: !Ref BrokerNodeInstance
     Export:
       Name: !Sub '${AWS::StackName}-EC2ID'
+  PrivateDnsName:
+    Description: Private DNS name of the created ec2 instance
+    Value: !GetAtt BrokerNodeInstance.PrivateDnsName
+    Export:
+      Name: !Sub '${AWS::StackName}-PrivateDnsName'
+  PublicDNSName:
+    Description: Public DNS name of the created ec2 instance
+    Value: !GetAtt BrokerNodeInstance.PublicDnsName
+    Export:
+      Name: !Sub '${AWS::StackName}-PublicDNSName'
